# minimal_ogre_next

./: LICENSE  MinVsgApp.cpp  MinVsgApp.h  main.cpp  meson.build  meson.options
